Bug 1875995 Export preview links run on from description
Changed so preview links appear under the description in a new
line for Export.

behatnotneeded

--- a/htdocs/theme/raw/sass/form/_form.scss
+++ b/htdocs/theme/raw/sass/form/_form.scss
@@ -427,3 +427,7 @@ input[type="radio"] {
     outline: medium solid $input-focus-border-color;
   }
 }
+
+.exportable-artefact-container .checkbox .with-label a.viewlink {
+    display: block;
+}
